tdf#126006 sc SID_RELOAD: restart notebookbar

Change-Id: Icca41461d203615be58f9cf1214b82d70ee55ccb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153818
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>