sfx2/source/view/viewfrm.cxx
@@ -838,8 +838,18 @@ void SfxViewFrame::ExecReload_Impl( SfxRequest& rReq )
 
                     UpdateDocument_Impl();
 
-                    if (vcl::CommandInfoProvider::GetModuleIdentifier(GetFrame().GetFrameInterface()) == "com.sun.star.text.TextDocument")
-                        sfx2::SfxNotebookBar::ReloadNotebookBar(u"modules/swriter/ui/");
+                    auto sModule = vcl::CommandInfoProvider::GetModuleIdentifier(GetFrame().GetFrameInterface());
+                    OUString sReloadNotebookBar;
+                    if (sModule == "com.sun.star.text.TextDocument")
+                        sReloadNotebookBar = u"modules/swriter/ui/";
+                    else if (sModule == "com.sun.star.sheet.SpreadsheetDocument")
+                        sReloadNotebookBar = u"modules/scalc/ui/";
+                    else if (sfx2::SfxNotebookBar::IsActive()
+                             && sModule != "presentation.PresentationDocument"
+                             && sModule != "com.sun.star.drawing.DrawingDocument")
+                    {
+                        assert(false && "SID_RELOAD Notebookbar active, but not refreshed here");
+                    }
 
                     try
                     {
@@ -878,6 +888,10 @@ void SfxViewFrame::ExecReload_Impl( SfxRequest& rReq )
 
                     // Propagate document closure.
                     SfxGetpApp()->NotifyEvent( SfxEventHint( SfxEventHintId::CloseDoc, GlobalEventConfig::GetEventName( GlobalEventId::CLOSEDOC ), xOldObj ) );
+
+                    // tdf#126006 Calc needs to reload the notebookbar after closing the document
+                    if (!sReloadNotebookBar.isEmpty())
+                        sfx2::SfxNotebookBar::ReloadNotebookBar(sReloadNotebookBar);
                 }
 
                 // Record as done
